--- a/content/community-messaging-fit.mdx
+++ b/content/community-messaging-fit.mdx
@@ -1,34 +1,33 @@
 ---
-title: 'Community-Messaging Fit'
-publishedAt: '2023-03-07'
-summary: "Community-messaging fit is when you've found the right description of the product that connects with the majority of your community."
+title: 'Two Reads That Made Me Jump on the Serverless Bandwagon'
+publishedAt: '2024-04-12'
+summary: 'Just Go Serverless'
+image: '/images/just-go-serverless/hmmmmmm-too-good.jpg'
 ---
 
-For startups, having product-market fit means you're building the right product for the right people. For [DevRel](/blog/devrel), having community-messaging fit means you're using the right words to describe the product for that community.
+I recently got really into the whole **serverless** tech thing after reading a couple of super insightful pieces. One was a deep dive by Deloitte into the [Total Cost of Ownership (TCO) for serverless compared to traditional cloud setups](https://pages.awscloud.com/rs/112-TZM-766/images/AWS_MAD_Deloitte_TCO_paper.pdf).
 
-This post will outline a few examples of how I've found community-messaging fit and some tips to help you iterate with your messaging.
+The other was a wild case where someone managed to handle [39 million requests in just a month for only $370](https://archive.postlight.com/insights/serving-39-million-requests-for-370-month-or-how-we-reduced-our-hosting-costs-by-two-orders-of). These articles didn't just highlight the cost benefits but completely changed how I saw serverless tech.
 
-## What is Community-Messaging Fit?
+## Just Go Serverless
 
-Marketing to developers should be **clear** and **relatable**.
+Deloitte's study laid out how to figure out if serverless is cheaper than old-school cloud methods. The savings weren’t mind-blowing, but they were definitely there, and pretty compelling when you think about not just upfront costs (**CAPEX**) but also ongoing costs (**OPEX**).
 
-- **Clear**—_not_ simple. The product often isn't simple, but the impact can be clear. If your explanation isn't clear yet, iterate and try again.
-- **Relatable**—_not_ obscure. Use language or analogies the community is familiar with. Connect new concepts with existing technologies or mental models.
+Then there’s the story of serving up 39 million requests for less than 400 bucks. It's a pretty bold claim and it shows just how much you can save if you play your cards right with serverless.
 
-Your community members have unique backgrounds. They've learned to code from university, bootcamps, or are self-taught. They started with C, or PHP, or Python, or JavaScript. Different descriptions of your product will connect with groups of the community.
+I used to be pretty doubtful about serverless, mainly because of some horror stories about hidden costs, like those with AWS Lambda where your supposed 'free tier' with 1 million requests disappears faster than you’d think. Those kinds of stories made me a bit cynical at first.
 
-**Community-messaging fit is when you've found the right description of the product that connects with the majority of your community.**
+But now, I think differently. Serverless isn't just about cutting costs. It’s about being nimble and getting things up and running fast. The speed you can hit the market with serverless is a game-changer, making it a top pick for setting up tech projects.
 
-Finding your fit isn't a one-time process. Your product will evolve and your community will grow. You have to be constantly iterating on the right messaging.
+## Sounds all too good to be true right
+<Image
+  alt={`Meme too good to be true`}
+  src={`/images/just-go-serverless/hmmmmmm-too-good.jpg`}
+  width={2248}
+  height={1590}
+/>
 
-## Finding Community-Messaging Fit
 
-Two good indicators for community-messaging fit are **virality** and **sharability**.
+Still, I keep wondering if it’s all too good to be true. Am I just buying into the hype too easily? Is serverless going to completely take over traditional cloud services? I don't have all the answers yet, but I’m staying tuned to see where things go.
 
-Developers _want_ to share good content. When they've learned something new, or found a new way to explain a topic they're interested in, they will voluntarily amplify to their audience. When they have a “lightbulb moment”, they want to share this excitement.
-
-When the topic is explained clearly, and it relates back to things the developer understands, it makes it easily sharable. This is how virality happens.
-
-Community-messaging fit is never finished because your community is ever-evolving.
-
-You take the input (questions, objections) and iterate towards the new output (analogies, clarifications). If you're not seeing virality, keep tweaking the message until it's clear and relatable. Build an inventory of analogies and examples to help connect the dots with the community.
+For now, I'm pretty jazzed about serverless and excited to see how it evolves. Whether it becomes the future of all computing or just a cool stepping stone, its impact on making things cheaper and faster is hard to ignore. I’m looking forward to more surprises and maybe even some challenges as I dive deeper into what serverless can do.
